@@ -6,13 +6,13 @@
     <parent>
         <groupId>org.structr</groupId>
         <artifactId>structr</artifactId>
-        <version>0.8.2</version>
+        <version>0.9.0</version>
     </parent>
 
     <groupId>org.structr</groupId>
     <artifactId>structr-rest</artifactId>
     <packaging>jar</packaging>
-    <version>0.8.2</version>
+    <version>0.9.0</version>
     <name>structr-rest</name>
     <description>Structr is an open source framework based on the popular Neo4j graph database.</description>
     <developers>
@@ -39,8 +39,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <debug>true</debug>	
                 </configuration>
             </plugin>
@@ -69,6 +69,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <systemPropertyVariables>
+                        <user.timezone>UTC</user.timezone>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -120,12 +132,6 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.jetty.aggregate</groupId>
-            <artifactId>jetty-all-server</artifactId>
-            <version>8.1.7.v20120910</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.2</version>
@@ -134,12 +140,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>1.7.1</version>
+            <version>2.2.4</version>
         </dependency>
         <dependency>
             <groupId>com.jayway.restassured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>1.6.2</version>
+            <version>1.8.1</version>
             <scope>compile</scope>
             <optional>false</optional>
         </dependency>
@@ -149,14 +155,23 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
-            
+        <dependency>
+            <groupId>org.eclipse.jetty.aggregate</groupId>
+            <artifactId>jetty-all-server</artifactId>
+            <version>8.1.7.v20120910</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tuckey</groupId>
+            <artifactId>urlrewritefilter</artifactId>
+            <version>4.0.4</version>
+        </dependency>
     </dependencies>
     <licenses>
         <license>
             <name>GNU General Public License, Version 3</name>
             <url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
             <comments>
-                Copyright (C) 2010-2013 Axel Morgner, structr &lt;structr@structr.org&gt;
+                Copyright (C) 2010-2014 Morgner UG (haftungsbeschränkt) &lt;structr@structr.org&gt;
 
                 This file is part of structr &lt;http://structr.org&gt;.
 
@@ -183,14 +198,20 @@
     
     <distributionManagement>
         <!--        <repository>
+<<<<<<< HEAD
             <id>releases.maven.structr.org</id>
             <name>maven.structr.org-releases</name>
             <url>http://maven.structr.org/artifactory/release</url>
+=======
+                <id>releases.maven.structr.org</id>
+                <name>maven.structr.org-releases</name>
+                <url>http://maven.structr.org/artifactory/release</url>
+>>>>>>> develop
         </repository>
         <snapshotRepository>
-            <id>snapshots.maven.structr.org</id>
-            <name>maven.structr.org-snapshots</name>
-            <url>http://maven.structr.org/artifactory/snapshot</url>
+                <id>snapshots.maven.structr.org</id>
+                <name>maven.structr.org-snapshots</name>
+                <url>http://maven.structr.org/artifactory/snapshot</url>
         </snapshotRepository>-->
         <repository>
             <id>sonatype-nexus-staging</id>
